# rgbdsaver

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: parse_rgbd.launch  sync.launch  sync_and_save.launch
msg/: node.msg
node/: main.cpp
node/src/: RGBDSaver.cpp  RGBDSaver.h
nodes/: save.cpp  sync.cpp
nodes/datasaver/: RGBDSaver.cpp  RGBDSaver.h
nodes/nodegen/: nodegen.cpp  nodegen.h
script/: examine.py
